2A/05_Projet_GL/src/test/deca/syntax/invalid/SansObjet/25_FauxModulo.deca
// Description:
//    tests de programme incorrect syntaxiquement ,Modulo incorrecte car l'opérande gauche n'est pas unary_expr
//
// Resultats:
//    ligne 11 : Erreur, mismatched input '*'
//
// Historique:
//    cree le 09/01/2024
{
    int x =0;
    x = 1%*; 
}